@@ -253,6 +253,8 @@
 
 20070417: Applied patch #1701267 - progressBar for quote plugins - thanks to xley for the patch.
 
+20070518: Applied patch #1711711 - repeat "Symbol" column at end of IndicatorSummary - thanks to xley for the patch.
+
 
 
 
